# roastmyaudio

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_prompt.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: .env.example  __init__.py  config.py
docs/: ARCHITECTURE.md  INSTALLATION.md
macos_app/: README.md  history.py  llm_cleanup.py  menubar_dictation.py  requirements.txt  text_injector.py  warmup.py
scripts/: download_models.py  install_launch_agent.sh  setup.sh
src/apps/macos/: __init__.py  audio_recorder.py  download_model.py  download_model_v2.py  hud_overlay.py  main.py  menubar_dictation.py  warmup.py
src/apps/web/: app.py  warmup.py
src/shared/: __init__.py  dictionary.py  formatter.py  history.py  llm_cleanup.py  settings.py  text_injector.py  transcriber.py
tests/: test_config.py  test_formatter.py  test_llm_cleanup.py  test_settings.py  test_text_injector.py
web_mvp/: README.md  app.py
web_mvp/static/: app.js
whisper-flow/: .gitignore  README.md  requirements.txt
whisper-flow/scripts/: download_models.py  setup.sh
whisper-flow/src/macos_app/: dictionary.py  download_model.py  download_model_v2.py  main.py  menubar_dictation.py  text_injector.py  warmup.py
whisper-flow/src/macos_app/runtime/: last_processed.txt
whisper-flow/src/web_ui/: app.py
whisper-flow/src/web_ui/docs/: post_conversion_layer.md
whisper-flow/src/web_ui/static/: styles.css
whisper-flow/src/web_ui/templates/: index.html
