[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "open-whisperflow"
version = "0.1.0"
description = "Open-source, fully local speech-to-text for macOS menu bar and web browser"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "WhisperFlow Contributors", email = ""}
]
maintainers = [
    {name = "WhisperFlow Contributors", email = ""}
]
requires-python = ">=3.9"
keywords = [
    "whisper",
    "speech-to-text",
    "dictation",
    "macos",
    "open-source",
    "privacy",
    "local-ai",
    "offline",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Spanish",
    "Natural Language :: French",
    "Natural Language :: German",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: Japanese",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Office/Business",
]

dependencies = [
    "faster-whisper>=1.0.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "sounddevice>=0.5.0",
    "scipy>=1.11.0",
    "Flask>=2.3.0",
    "Flask-CORS>=4.0.0",
    "PyObjC-core>=10.0",
    "PyObjC-framework-Cocoa>=10.0",
    "PyObjC-framework-Quartz>=10.0",
    "PyObjC-framework-ApplicationServices>=10.0",
    "rumps>=0.4.0",
    "pynput>=1.7.7",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[project.urls]
Homepage = "https://github.com/open-whisperflow/open-whisperflow"
Repository = "https://github.com/open-whisperflow/open-whisperflow.git"
Documentation = "https://github.com/open-whisperflow/open-whisperflow/tree/main/docs"
Issues = "https://github.com/open-whisperflow/open-whisperflow/issues"
Changelog = "https://github.com/open-whisperflow/open-whisperflow/blob/main/CHANGELOG.md"

# ── Ruff linter configuration ─────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # do not perform function calls in default arguments
    "UP007",  # X | Y union syntax (keep 3.9 compat)
]

[tool.ruff.lint.isort]
known-first-party = ["config", "src"]

# ── Pytest configuration ──────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
